--- a/tm_backend/Dockerfile
+++ b/tm_backend/Dockerfile
@@ -1,5 +1,5 @@
 # Etapa de construcción
-FROM node:18-alpine AS builder
+FROM node:20-slim AS builder
 
 WORKDIR /app
 
@@ -14,7 +14,7 @@ RUN npx prisma generate
 RUN npm run build
 
 # Etapa de producción
-FROM node:18-alpine
+FROM node:20-slim
 
 WORKDIR /app
 
@@ -23,7 +23,6 @@ COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/prisma ./prisma
 
-# Variables de entorno por defecto (serán sobreescritas en despliegue)
 ENV PORT=3000
 EXPOSE 3000
 
